--- a/app.json
+++ b/app.json
@@ -10,7 +10,9 @@
       "required": true
     },
     "Webhook_url": {
-      "required": true
+      "description": "Add this after deploy"
+      "required": false
+      "value": "https://testwebhook-46698bc2b28d.herokuapp.com/"
     }
   },
   "formation": {
