--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     "Webhook_url": {
       "description": "Add this after deploy eg : https://testapp-46698bc2b28d.herokuapp.com/ . you can find your url from app settings",
       "required": false,
-      "value": "https://testapp-46698bc2b28d.herokuapp.com/"
+      "value": "False"
     }
   },
   "formation": {
