--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "webhook-python-telegram-bot",
   "logo": "",
-  "keywords": ["python-telegram-bot,webhook"],
+  "keywords": ["python-telegram-bot,webhook,heroku"],
   "repository": "https://github.com/CP2003/webhook-python-telegram-bot",
   "description": "Example webhook telegram bot for heroku using python-telegram-bot",
   "scripts": {},
